# tony-kvdb

./: Cargo.toml  README.md  abi.proto  build.rs  demomy.excalidraw  readme.md
.github/workflows/: rust.yml
examples/: client.rs  dummy_server.rs  server.rs
parse/: Cargo.toml
parse/src/: main.rs
src/: error.rs  lib.rs
src/pb/: mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs
