[package]
edition = "2021"
name = "kv-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" 
bytes = "1" # 高效处理网络的buffer 库
dashmap = "5" 
http = "0.2" # http库
prost = "0.9" # 处理protobuf的库
thiserror = "1" 
tracing = "0.1" # 日志处理

[dev-dependencies]

anyhow = "1" # 异常处理库
async-prost = "0.3" # 异步处理protobuf的库 , 支持 把proto 封装成 TCP stream
futures = "0.3" # 提供 Stream trait
tokio = {version = "1", features = ["full"]}# 异步处理的库            
tracing-subscriber = "0.3" # 日志处理

[build-dependencies]
prost-build = "0.9" # 生成proto文件的库
